# wall-of-shame

./: .env.example  CODEOWNERS  Dockerfile  LICENSE  README.md  app_template.py  docker-compose.yml  main.old.py  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md  02_feature_request.md
.github/workflows/: code_testing.yml  publish_container.yml  publish_container_nightly.yml
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
infra/: docker-compose.coverage-test.yml  docker-compose.frontend.yml  docker-compose.opencanary.yml  docker-compose.postgres.yml  docker-compose.yml  opencanary.conf
infra/initdb/: init.sql
tests/: test_functions.py  test_get.py  test_post.py
