[project]
name = "wall-of-shame"
version = "0.1.0"
description = "A project for logging and shaming those who attempt to attack an OpenCanary instance."
authors = [
    { name="shrunbr", email="shrunbr@shockmail.biz" }
]
maintainers = [
    { name="shrunbr", email="shrunbr@shockmail.biz" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "psycopg[binary,pool]>=3.2.9",
    "requests>=2.32.5",
]

[project.scripts]
main = "main:app"

[project.urls]
Homepage = "https://github.com/shrunbr/wall-of-shame"
Repository = "https://github.com/shrunbr/wall-of-shame"
Issues = "https://github.com/shrunbr/wall-of-shame/issues"
